tests/pos/simple/hex.ts




var a = 0x00000008;

var b = 0x00000010;

assert(b === a + a);

