tests/neg/simple/54-hex.ts


let a = 0x00000008;

let b = 0x00000011;

assert(b === a + a);
